test/compile_errors/err_break_value.w
//! expect-check-fail: break with a value is not supported

fn main:
    while true:
        break 1
